--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "pre-commit": [
+    "ts.check",
+    "build",
+    "add-build"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -29,6 +34,8 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "pre-commit": "^1.2.2",
+    "rimraf": "^5.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
   }
